Changes done. 1. Card view added for activities. 2. Sidebar added & button alignment fix.
Issues
1. Favicon
2. More CSS
3. AM/PM not pass.
4. Blank input.
7. Add delete option.
8. Play music on completing the countdown.
9. Add time counter/stop watch in graph section.
10. Mobile view fix.

--- a/static/css/card_view.css
+++ b/static/css/card_view.css
@@ -1,4 +1,35 @@
 .form-popup {
+    transition: 0.3s;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 350px;
+    height: 400px;
+    border-radius: 5px;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: azure;
+}
+
+.form-popup img {
+    top: 10px;
+}
+
+.form-popup #create_account #login_user {
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+/*.form-popup {
     position: absolute;
     margin: auto;
     top: 0;
@@ -25,7 +56,7 @@
     object-fit: fill;
 
 }
-
+*/
 .activity_container {
     position: absolute;
     margin: auto;
@@ -35,7 +66,6 @@
     left: 0;
     width: 420px;
     height: 500px;
-    flex-wrap: wrap;
     justify-content: center;
     align-content: space-around;
     align-items: center;
@@ -49,29 +79,106 @@
     object-fit: fill;
 }
 
-#monitor_activity {
+.activity_card label {
+    top: 0;
+}
+
+#daily_target {
+    width: 130px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+
+#count_down_display {
     position: relative;
     margin: auto;
     top: 150px;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 600px;
-    height: 1000px;
-    flex-wrap: wrap;
+    width: 300px;
+    height: 200px;
     justify-content: center;
     align-content: space-around;
     align-items: center;
     text-align: center;
-    padding: 6%;
+    padding: 3%;
     background: azure;
     box-sizing: border-box;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
-    object-fit: fill;
+
 }
 
+#count_down_display input {
+    width: 80px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+#count_down_display label {
+    margin-top: 20px;
+}
+
+#monitor_activity {
+    transition: 0.3s;
+    position: absolute;
+    margin: auto;
+    overflow: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 600px;
+    height: 800px;
+    border-radius: 5px;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: cornsilk;
+}
+
+#Activit_name {
+    color: black;
+    margin-top: 20px;
+    align-content: center;
+    margin-bottom: 20px;
+    padding: 5%;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+#tbody {
+    margin: auto;
+
+}
+
+#tbody td {
+    text-align: center;
+    padding: 20px;
+    display: inline-block;
+    margin: 10px;
+    background-color: gainsboro;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    width: 80px
+
+}
+
+#tbody td:hover {
+    background-color: #ddd;
+    color: black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+/*
 @media screen and (max-width: 500px) {
     .form-popup {
         float: none;
@@ -97,3 +204,4 @@
         margin: 10px 0;
     }
 }
+ */
