--- a/static/css/header_view.css
+++ b/static/css/header_view.css
@@ -2,16 +2,18 @@
 .header {
     overflow: hidden;
     background-color: #f1f1f1;
-    padding: 20px 10px;
-    border-radius: 2px;
+    /*    padding: 5px 5px;*/
     position: fixed;
-    width: 98%;
-    top: 10px;
+    height: 100%;
+    width: 8%;
+    left: 0px;
+    top: 0px;
+
 }
 
 /* Style the header links */
 .header a {
-    float: left;
+    float: top;
     color: black;
     text-align: center;
     padding: 20px;
@@ -21,50 +23,79 @@
     border-radius: 4px;
 }
 
+#count_down {
+    float: top;
+    color: black;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    margin-left: 1px;
+}
+
+#count_down:hover {
+    background-color: #ddd;
+    color: black;
+}
+
 /* Change the background color on mouse-over */
 .header a:hover {
     background-color: #ddd;
     color: black;
 }
 
-.header a.active:hover {
+
+/*.header a.active:hover {
     background-color: #ddd;
 }
 
-/* Style the active/current link*/
+/* Style the active/current link
 .header a.active {
     padding: 20px;
     background-color: dodgerblue;
     color: darkblue;
-    margin-left: 10px;
-}
+}*/
 
 /* Float the link section to the right */
-.header-right {
-    float: right;
+.header_container {
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    margin-top: 5px;
+    width: 90%;
 }
 
-.header-left {
-    width: 33.33%;
-    padding: 5px;
-    float: left;
-    margin-right: 10px;
+.header_container br {
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .header img {
-    margin-right: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    top: 10px;
 }
 
-
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 500px) {
-    .header a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .header-right {
-        float: none;
-    }
+#show label {
+    float: top;
+    color: black;
+    text-align: center;
+    padding: 5%;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
 }
+
+#show label:hover {
+    background-color: #ddd;
+    color: black;
+}
+
