--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,10 +37,6 @@ button:hover {
     margin-bottom: 10px;
 }
 
-.heading {
-    top: 0px;
-    margin-top: 1px;
-}
 
 textarea {
     width: 150px;
